[tool.poetry]
name = "fastapi-restapi"
version = "0.1.0"
description = ""
authors = ["AntonHran <anton.hranovskyi@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_restapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
pydantic = {extras = ["email"], version = "^2.3.0"}
alembic = "^1.12.0"
psycopg2 = "^2.9.7"
jinja2 = "^3.1.2"
pydantic-extra-types = "^2.1.0"
phonenumbers = "^8.13.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
